review fixes for govuk-spacing and tablet view

--- a/src/lbcamden/components/guide-header/_index.scss
+++ b/src/lbcamden/components/guide-header/_index.scss
@@ -33,7 +33,7 @@
     }
 
     @include govuk-media-query($from: tablet) {
-      width: calc(100% / 2);
+      width: calc((100% - #{govuk-spacing(6)} * 2) / 2);
 
       &:nth-last-child(2) {
         margin-bottom: 0;
@@ -41,8 +41,7 @@
     }
 
     @include govuk-media-query($from: desktop) {
-      // 90px is the width of the three padding-right values
-      width: calc((100% - 90px) / 3);
+      width: calc((100% - #{govuk-spacing(6)} * 3) / 3);
 
       &:nth-last-child(3) {
         margin-bottom: 0;
